# repo

./: .gitattributes  .gitignore  .perltidyrc  404.html  Bakefile.sh  Cargo.toml  README.md  deno.json  foxxy.toml  index.html  search.html  sitemap.xml
commands/: index.html
concepts/: index.html
docs/: commands.md  concepts.md  getting-started.md  index.md  motivation.md
getting-started/: index.html
motivation/: index.html
search/: search_index.json
src/: cli.rs  config.rs  deps.ts  main.rs  main.ts  repo.rs  types.ts  util.rs
src/commands/: deploy.rs  gui.rs  internal.rs  mod.rs  task.rs  template.rs
src/configs/: .browserslistrc  .commitlintrc  .eslintrc  .lintstagedrc.js  .markuplintrc.json  .npmrc  .postrccrc.js  .renovaterc.json  .stylelintrc  tsconfig.json
src/lint-modules/: basalt.ts  bash.ts  git.ts  glue.ts  index.ts  prettier.ts  shellcheck.ts
src/linters/: bake.ts  basalt.ts  bash.ts  deno.ts  editorconfig.ts  git.ts  glue.ts  hookah.ts  index.ts  license.ts  prettier.ts
src/modules/: bake.ts  bakefile.ts  basalt.ts  deno.ts  editorconfig.ts  git.ts  gitattributes.ts  glue.ts  license.ts  prettier.ts
src/parsers/: editorconfig.ts  gitattributes.ts
src/releasers/: nodejs.ts
src/schemas/: basalt.schema.json  fox.schema.json  foxxoGlobalConfig.schema.json  foxxoGlobalState.schema.json  foxxoProject.schema.json  foxxyProject.schema.json
src/subcommands/: clean.ts  docs.ts  fix.ts  index.ts  init.ts  lint.ts  open.ts  release.ts
src/ts/: deps.ts  main.ts
src/util/: Notices.ts  helper.ts  lintUtils.ts  log.ts  project.ts  util.ts  (+2 more)
(+14 files in other folders)
