[package]
name = "repomgr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
cargo_toml = "0.15.2"
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
directories = "4.0.1"
dirs = "4.0.0"
minijinja = "0.30.6"
notify = { version = "5.1.0", features = ["serde"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.26.0"
toml = "0.7.2"
walkdir = "2.3.2"
